# CSU33012-SWENG-ASS2

./: .gitignore  CSU33012-SWENG-ASS1.cabal  CSU33012-SWENG-ASS2.cabal  Contribution.md  Dockerfile  LICENSE  README.md  run.sh  stack.yaml
.github/workflows/: haskell.yml
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux-tinfo6/79d915199971416f806b70bda74bdca76b86dabac1a6bb42b1f5b53a2e428132/9.0.2/doc/CSU33012-SWENG-ASS1-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux-tinfo6/79d915199971416f806b70bda74bdca76b86dabac1a6bb42b1f5b53a2e428132/9.0.2/lib/x86_64-linux-ghc-9.0.2/CSU33012-SWENG-ASS1-0.1.0.0-H4jtIH0boMrLd5UTmHpPD3/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/79d915199971416f806b70bda74bdca76b86dabac1a6bb42b1f5b53a2e428132/9.0.2/pkgdb/: CSU33012-SWENG-ASS1-0.1.0.0-H4jtIH0boMrLd5UTmHpPD3.conf  package.cache
app/: Main.hs
scripts/: docker-build.sh  docker-run-rm.sh  dockerhub-pull-v1.0.1.sh  dockerhub-pull-v2.0.0.sh  dockerhub-run-rm.sh  pandoc.sh  run.sh
src/: Lib.hs
test/: LibSpec.hs
