name:                CSU33012-SWENG-ASS2
version:             0.1.0.0
homepage:            https://github.com/alexandersep/CSU33012-SWENG-ASS2/README.md
license:             BSD3
license-file:        LICENSE
author:              Alexander Sepelenco, Annelee O Mahony, Elliot Lyons, Brian Sharkey
maintainer:          sepelena@tcd.ie, omahona5@tcd.ie, elliot243lyons@gmail.com, bsharkey@tcd.ie
copyright:           2022 Alexander Sepelenco, Annelee O Mahony, Elliot Lyons, Brian Sharkey 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable CSU33012-SWENG-ASS2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock
                     , http-types
                     , text
                     , mtl
                     , lucid
                     , Spock-lucid
                     , CSU33012-SWENG-ASS2
  default-language:    Haskell2010

test-suite CSU33012-SWENG-ASS2-test 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , CSU33012-SWENG-ASS2 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
